--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cf38275
-	trimbase = 
+	trim = ieee80211_channels
+	base = 2847506
+	trimbase = cf38275
 	parent = upstream
 	previous = 4963cef
