--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 52857a7
-	trimbase = 
+	trim = access_point_control
+	base = 5446d36
+	trimbase = 52857a7
 	parent = upstream
 	previous = 4963cef
