--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ea81fa3
-	trimbase = 
+	trim = hostapd_access_point
+	base = 6135b46
+	trimbase = ea81fa3
 	parent = upstream
 	previous = 4963cef
