--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 134503a
-	trimbase = 
+	trim = linux_networking
+	base = 4303d4b
+	trimbase = 134503a
 	parent = upstream
 	previous = 4963cef
