--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 6ecaa69
-	trimbase = 
+	trim = asmach
+	base = 0c57777
+	trimbase = 6ecaa69
 	parent = upstream
 	previous = 4963cef
