--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 77ff01d
-	trimbase = 
+	trim = ddwrt_access_point
+	base = dece48b
+	trimbase = 77ff01d
 	parent = upstream
 	previous = 4963cef
