--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8cac937
-	trimbase = 
+	trim = network_detector
+	base = 46f5640
+	trimbase = 8cac937
 	parent = upstream
 	previous = 4963cef
