--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8fc7a3f
-	trimbase = 
+	trim = network_traffic_control
+	base = 519fe0b
+	trimbase = 8fc7a3f
 	parent = upstream
 	previous = 4963cef
