--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9a31070
-	trimbase = 
+	trim = network_monitor_udp
+	base = ea74025
+	trimbase = 9a31070
 	parent = upstream
 	previous = 4963cef
