--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = aef8089
-	trimbase = 
+	trim = asmach_tutorials
+	base = 575228e
+	trimbase = aef8089
 	parent = upstream
 	previous = 4963cef
