--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 850c93f
+	base = 352306c
 	trimbase = 
 	parent = debian/hydro/multi_interface_roam
-	previous = 
+	previous = 850c93f
