--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 741f605
+	base = 50a9f90
 	trimbase = 
 	parent = debian/hydro/network_detector
-	previous = 
+	previous = 741f605
