--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c52d009
+	base = 76ca8fc
 	trimbase = 
 	parent = debian/hydro/asmach_tutorials
-	previous = 
+	previous = c52d009
