--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4303d4b
+	base = 0286f23
 	trimbase = 
 	parent = release/hydro/linux_networking
-	previous = 
+	previous = 4303d4b
