--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b6fd3a6
+	base = 8780513
 	trimbase = 
 	parent = debian/hydro/linux_networking
-	previous = 
+	previous = b6fd3a6
