--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 69c8907
+	base = 92f5392
 	trimbase = 
 	parent = debian/hydro/network_monitor_udp
-	previous = 
+	previous = 69c8907
