--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb65c70
+	base = c2534cb
 	trimbase = 
 	parent = debian/hydro/ddwrt_access_point
-	previous = 
+	previous = eb65c70
