--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aa9ce45
+	base = 2f7ac87
 	trimbase = 
 	parent = release/hydro/network_control_tests
-	previous = 
+	previous = aa9ce45
