--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c898d6
+	base = 4859812
 	trimbase = 
 	parent = debian/hydro/network_control_tests
-	previous = 
+	previous = 2c898d6
