--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5446d36
+	base = 81544a7
 	trimbase = 
 	parent = release/hydro/access_point_control
-	previous = 
+	previous = 5446d36
