--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9233f1b
+	base = 52e537c
 	trimbase = 
 	parent = debian/hydro/access_point_control
-	previous = 
+	previous = 9233f1b
