--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0c57777
+	base = d8696c6
 	trimbase = 
 	parent = release/hydro/asmach
-	previous = 
+	previous = 0c57777
