--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5966473
+	base = b28b09a
 	trimbase = 
 	parent = debian/hydro/asmach
-	previous = 
+	previous = 5966473
