--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f4027b9
+	base = 2e40cf5
 	trimbase = 
 	parent = debian/hydro/hostapd_access_point
-	previous = 
+	previous = f4027b9
