--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a626749
+	base = 4b1d8ce
 	trimbase = 
 	parent = debian/hydro/ieee80211_channels
-	previous = 
+	previous = a626749
