--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a626749
+	base = 13fb77e
 	trimbase = 
 	parent = debian/hydro/ieee80211_channels
-	previous = 
+	previous = a626749
