--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b5ca580
+	base = 92e3523
 	trimbase = 
 	parent = release/hydro/linksys_access_point
-	previous = 
+	previous = b5ca580
