--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d38f686
+	base = 69738c3
 	trimbase = 
 	parent = debian/hydro/linksys_access_point
-	previous = 
+	previous = d38f686
