--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 742fa25
+	base = 0050af1
 	trimbase = 
 	parent = debian/hydro/network_traffic_control
-	previous = 
+	previous = 742fa25
