--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1a396f3
+	base = f117a94
 	trimbase = 
 	parent = release/hydro/multi_interface_roam
-	previous = 
+	previous = 1a396f3
