--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1560816
+	base = 3b9c557
 	trimbase = 
 	parent = rpm/hydro/multi_interface_roam
-	previous = 
+	previous = 1560816
