--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 46f5640
+	base = 2aebaea
 	trimbase = 
 	parent = release/hydro/network_detector
-	previous = 
+	previous = 46f5640
