--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 673d402
+	base = 3515b23
 	trimbase = 
 	parent = rpm/hydro/network_detector
-	previous = 
+	previous = 673d402
