--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 575228e
+	base = 5242f31
 	trimbase = 
 	parent = release/hydro/asmach_tutorials
-	previous = 
+	previous = 575228e
