--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c556154
+	base = d59e334
 	trimbase = 
 	parent = rpm/hydro/asmach_tutorials
-	previous = 
+	previous = c556154
