--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ae2a922
+	base = e1c5107
 	trimbase = 
 	parent = rpm/hydro/linux_networking
-	previous = 
+	previous = ae2a922
