--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ea74025
+	base = c83f2ab
 	trimbase = 
 	parent = release/hydro/network_monitor_udp
-	previous = 
+	previous = ea74025
