--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80eb612
+	base = c1faa79
 	trimbase = 
 	parent = rpm/hydro/network_monitor_udp
-	previous = 
+	previous = 80eb612
