--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dece48b
+	base = 1c2fcc1
 	trimbase = 
 	parent = release/hydro/ddwrt_access_point
-	previous = 
+	previous = dece48b
