--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5898537
+	base = baa2f17
 	trimbase = 
 	parent = rpm/hydro/ddwrt_access_point
-	previous = 
+	previous = 5898537
