--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aa9ce45
+	base = 9f05b77
 	trimbase = 
 	parent = release/hydro/network_control_tests
-	previous = 
+	previous = aa9ce45
