--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2c734c4
+	base = f18f245
 	trimbase = 
 	parent = rpm/hydro/network_control_tests
-	previous = 
+	previous = 2c734c4
