--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4ddf667
+	base = 6697f5d
 	trimbase = 
 	parent = rpm/hydro/access_point_control
-	previous = 
+	previous = 4ddf667
