--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6135b46
+	base = 2feb765
 	trimbase = 
 	parent = release/hydro/hostapd_access_point
-	previous = 
+	previous = 6135b46
