--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e266f8
+	base = 0fe61e5
 	trimbase = 
 	parent = rpm/hydro/hostapd_access_point
-	previous = 
+	previous = 0e266f8
