--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2847506
+	base = a2f1615
 	trimbase = 
 	parent = release/hydro/ieee80211_channels
-	previous = 
+	previous = 2847506
