--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91a4866
+	base = 9d6ae22
 	trimbase = 
 	parent = rpm/hydro/ieee80211_channels
-	previous = 
+	previous = 91a4866
