--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09e3687
+	base = 05873b9
 	trimbase = 
 	parent = rpm/hydro/linksys_access_point
-	previous = 
+	previous = 09e3687
