--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 519fe0b
+	base = 0d4a732
 	trimbase = 
 	parent = release/hydro/network_traffic_control
-	previous = 
+	previous = 519fe0b
