--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a0f7ebd
+	base = df74a34
 	trimbase = 
 	parent = rpm/hydro/network_traffic_control
-	previous = 
+	previous = a0f7ebd
