--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ieee80211_channels
-	base = 9d98788
-	trimbase = 
+	base = 4eeecdc
+	trimbase = 9d98788
 	parent = upstream
 	previous = 4b063f5
