--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = access_point_control
-	base = 5d033bd
-	trimbase = 
+	base = 4f0af96
+	trimbase = 5d033bd
 	parent = upstream
 	previous = 4b063f5
