--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = hostapd_access_point
-	base = a7ddcb6
-	trimbase = 
+	base = bfdbb8b
+	trimbase = a7ddcb6
 	parent = upstream
 	previous = 4b063f5
