--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
 	base = 1a396f3
-	trimbase = 5fe00d1
+	trimbase = 
 	parent = upstream
 	previous = 4963cef
