--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multi_interface_roam
-	base = 49e25c3
-	trimbase = 
+	base = fc606c0
+	trimbase = 49e25c3
 	parent = upstream
 	previous = 4b063f5
