--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
 	base = b5ca580
-	trimbase = 827326b
+	trimbase = 
 	parent = upstream
 	previous = 4963cef
