--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linksys_access_point
-	base = 96a92f3
-	trimbase = 
+	base = 81654d4
+	trimbase = 96a92f3
 	parent = upstream
 	previous = 4b063f5
