--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = linux_networking
-	base = 4178864
-	trimbase = 
+	base = 8087d69
+	trimbase = 4178864
 	parent = upstream
 	previous = 4b063f5
