--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach
-	base = 4ad5289
-	trimbase = 
+	base = 2ecfdd7
+	trimbase = 4ad5289
 	parent = upstream
 	previous = 4b063f5
