--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ddwrt_access_point
-	base = 03cb250
-	trimbase = 
+	base = c5bc43b
+	trimbase = 03cb250
 	parent = upstream
 	previous = 4b063f5
