--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
 	base = aa9ce45
-	trimbase = a19f322
+	trimbase = 
 	parent = upstream
 	previous = 4963cef
