--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_control_tests
-	base = d33abc9
-	trimbase = 
+	base = a877a84
+	trimbase = d33abc9
 	parent = upstream
 	previous = 4b063f5
