--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_detector
-	base = 0d90296
-	trimbase = 
+	base = fd110ec
+	trimbase = 0d90296
 	parent = upstream
 	previous = 4b063f5
