--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_traffic_control
-	base = db07fa2
-	trimbase = 
+	base = 8f91da0
+	trimbase = db07fa2
 	parent = upstream
 	previous = 4b063f5
