--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = network_monitor_udp
-	base = 23dd6bc
-	trimbase = 
+	base = 80edf50
+	trimbase = 23dd6bc
 	parent = upstream
 	previous = 4b063f5
