--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = asmach_tutorials
-	base = 76a85e7
-	trimbase = 
+	base = ab285dd
+	trimbase = 76a85e7
 	parent = upstream
 	previous = 4b063f5
