--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.4": ["Dash", "dash@clearpathrobotics.com"], "1.0.2": ["Dash", "dash@clearpathrobotics.com"], "1.0.3": ["Dash", "dash@clearpathrobotics.com"]}
+{"1.0.4": ["Dash", "dash@clearpathrobotics.com"], "1.0.5": ["Dash", "dash@clearpathrobotics.com"], "1.0.2": ["Dash", "dash@clearpathrobotics.com"], "1.0.3": ["Dash", "dash@clearpathrobotics.com"]}
