--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.0.4-0": ["Fri Oct 03 2014", "Devon Ash", "dash@clearpathrobotics.com"]}
+{"1.0.4-0": ["Fri Oct 03 2014", "Devon Ash", "dash@clearpathrobotics.com"], "1.0.5-0": ["Mon Oct 06 2014", "Devon Ash", "dash@clearpathrobotics.com"]}
