Imported upstream version '1.0.10' of 'upstream'

--- a/asmach/CMakeLists.txt
+++ b/asmach/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(asmach)
 # Load catkin and all dependencies required for this package
 # TODO: remove all from COMPONENTS that are not catkin packages.
-find_package(catkin REQUIRED rospy )
+find_package(catkin REQUIRED )
 
 catkin_package(
     DEPENDS # TODO add dependencies
@@ -14,11 +14,7 @@ catkin_package(
 )
 
 
-install(PROGRAMS /src/asmach/concurrence.py /src/asmach/state_machine.py /src/asmach/tb_edit.py /src/asmach/log.py /src/asmach/async.py /src/asmach/util.py /src/asmach/iterator.py /src/asmach/state.py /src/asmach/user_data.py /src/asmach/sequence.py /src/asmach/exceptions.py /src/asmach/container.py /src/asmach/__init__.py  USE_SOURCE_PERMISSIONS 
- DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-install(DIRECTORY src asmach  
- DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
 
 
