--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7ffbbbf
-	trimbase = 
+	trim = ieee80211_channels
+	base = daa9310
+	trimbase = 7ffbbbf
 	parent = upstream
 	previous = bd374fc
