--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2526530
-	trimbase = 
+	trim = access_point_control
+	base = 6e0dcd5
+	trimbase = 2526530
 	parent = upstream
 	previous = bd374fc
