--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c94b230
-	trimbase = 
+	trim = multi_interface_roam
+	base = 9030b23
+	trimbase = c94b230
 	parent = upstream
 	previous = bd374fc
