--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 393540b
-	trimbase = 
+	trim = linksys_access_point
+	base = 95a5267
+	trimbase = 393540b
 	parent = upstream
 	previous = bd374fc
