--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c2d8266
-	trimbase = 
+	trim = asmach
+	base = 8262d78
+	trimbase = c2d8266
 	parent = upstream
 	previous = bd374fc
