--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 255d4b4
-	trimbase = 
+	trim = network_control_tests
+	base = 84928e0
+	trimbase = 255d4b4
 	parent = upstream
 	previous = bd374fc
