--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = eb4eb46
-	trimbase = 
+	trim = linux_networking
+	base = a334b9e
+	trimbase = eb4eb46
 	parent = upstream
 	previous = bd374fc
