--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2606279
-	trimbase = 
+	trim = ddwrt_access_point
+	base = d22b18a
+	trimbase = 2606279
 	parent = upstream
 	previous = bd374fc
