--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2df1ac5
-	trimbase = 
+	trim = hostapd_access_point
+	base = 80e8839
+	trimbase = 2df1ac5
 	parent = upstream
 	previous = bd374fc
