--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d07823a
-	trimbase = 
+	trim = network_detector
+	base = 796068d
+	trimbase = d07823a
 	parent = upstream
 	previous = bd374fc
