--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fc9a342
-	trimbase = 
+	trim = network_traffic_control
+	base = 8d85ff2
+	trimbase = fc9a342
 	parent = upstream
 	previous = bd374fc
