--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 04597e9
-	trimbase = 
+	trim = network_monitor_udp
+	base = 8725d43
+	trimbase = 04597e9
 	parent = upstream
 	previous = bd374fc
