--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5d42907
-	trimbase = 
+	trim = asmach_tutorials
+	base = 17b0deb
+	trimbase = 5d42907
 	parent = upstream
 	previous = bd374fc
