--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ab54c6f
+	base = 98a6afe
 	trimbase = 
 	parent = debian/indigo/asmach_tutorials
-	previous = 
+	previous = ab54c6f
