--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 573c749
+	base = 7b86642
 	trimbase = 
 	parent = debian/indigo/network_monitor_udp
-	previous = 
+	previous = 573c749
