--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 05a59f7
+	base = 1013c2a
 	trimbase = 
 	parent = debian/indigo/ddwrt_access_point
-	previous = 
+	previous = 05a59f7
