--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dabe741
+	base = 4896905
 	trimbase = 
 	parent = debian/indigo/linux_networking
-	previous = 
+	previous = dabe741
