--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d80f225
+	base = 8d949d0
 	trimbase = 
 	parent = debian/indigo/access_point_control
-	previous = 
+	previous = d80f225
