--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8d85ff2
+	base = fe15241
 	trimbase = 
 	parent = release/indigo/network_traffic_control
-	previous = 
+	previous = 8d85ff2
