--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2ca6caf
+	base = 4c57584
 	trimbase = 
 	parent = debian/indigo/network_traffic_control
-	previous = 
+	previous = 2ca6caf
