--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 80e8839
+	base = e6c6bf4
 	trimbase = 
 	parent = release/indigo/hostapd_access_point
-	previous = 
+	previous = 80e8839
