--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4930a1
+	base = d328a5c
 	trimbase = 
 	parent = debian/indigo/hostapd_access_point
-	previous = 
+	previous = d4930a1
