--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6a34010
+	base = 52bc8b2
 	trimbase = 
 	parent = debian/indigo/ieee80211_channels
-	previous = 
+	previous = 6a34010
