--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 95bfe8d
+	base = 1df97e8
 	trimbase = 
 	parent = debian/indigo/linksys_access_point
-	previous = 
+	previous = 95bfe8d
