--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9030b23
+	base = ee3b651
 	trimbase = 
 	parent = release/indigo/multi_interface_roam
-	previous = 
+	previous = 9030b23
