--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 15a107b
+	base = b4fa4c6
 	trimbase = 
 	parent = debian/indigo/multi_interface_roam
-	previous = 
+	previous = 15a107b
