--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 84928e0
+	base = 4595811
 	trimbase = 
 	parent = release/indigo/network_control_tests
-	previous = 
+	previous = 84928e0
