--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1308652
+	base = eb5d8f2
 	trimbase = 
 	parent = debian/indigo/network_control_tests
-	previous = 
+	previous = 1308652
