--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5ba248b
+	base = a4ce879
 	trimbase = 
 	parent = debian/indigo/asmach
-	previous = 
+	previous = 5ba248b
