--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 796068d
+	base = c41cac2
 	trimbase = 
 	parent = release/indigo/network_detector
-	previous = 
+	previous = 796068d
