--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 26a3f5e
+	base = bc4e1c1
 	trimbase = 
 	parent = debian/indigo/network_detector
-	previous = 
+	previous = 26a3f5e
