--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 17b0deb
+	base = 071dc76
 	trimbase = 
 	parent = release/indigo/asmach_tutorials
-	previous = 
+	previous = 17b0deb
