--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf6f385
+	base = 65ad49d
 	trimbase = 
 	parent = rpm/indigo/asmach_tutorials
-	previous = 
+	previous = cf6f385
