--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8725d43
+	base = 3e243c8
 	trimbase = 
 	parent = release/indigo/network_monitor_udp
-	previous = 
+	previous = 8725d43
