--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f2cb862
+	base = 9dcd0e9
 	trimbase = 
 	parent = rpm/indigo/network_monitor_udp
-	previous = 
+	previous = f2cb862
