--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d22b18a
+	base = 335346a
 	trimbase = 
 	parent = release/indigo/ddwrt_access_point
-	previous = 
+	previous = d22b18a
