--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35e81d5
+	base = 3135508
 	trimbase = 
 	parent = rpm/indigo/ddwrt_access_point
-	previous = 
+	previous = 35e81d5
