--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a334b9e
+	base = 819850c
 	trimbase = 
 	parent = release/indigo/linux_networking
-	previous = 
+	previous = a334b9e
