--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee3231c
+	base = 6e6c768
 	trimbase = 
 	parent = rpm/indigo/linux_networking
-	previous = 
+	previous = ee3231c
