--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6e0dcd5
+	base = 9df0eb5
 	trimbase = 
 	parent = release/indigo/access_point_control
-	previous = 
+	previous = 6e0dcd5
