--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 961b584
+	base = 0afbb12
 	trimbase = 
 	parent = rpm/indigo/access_point_control
-	previous = 
+	previous = 961b584
