--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81c204c
+	base = 8c51fe5
 	trimbase = 
 	parent = rpm/indigo/network_traffic_control
-	previous = 
+	previous = 81c204c
