--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a628d1
+	base = 11091c7
 	trimbase = 
 	parent = rpm/indigo/hostapd_access_point
-	previous = 
+	previous = 5a628d1
