--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = daa9310
+	base = 1de1c63
 	trimbase = 
 	parent = release/indigo/ieee80211_channels
-	previous = 
+	previous = daa9310
