--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbc2cbe
+	base = 6279e4c
 	trimbase = 
 	parent = rpm/indigo/ieee80211_channels
-	previous = 
+	previous = fbc2cbe
