--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 95a5267
+	base = d056f99
 	trimbase = 
 	parent = release/indigo/linksys_access_point
-	previous = 
+	previous = 95a5267
