--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ad0549
+	base = 5ebb993
 	trimbase = 
 	parent = rpm/indigo/linksys_access_point
-	previous = 
+	previous = 3ad0549
