--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a6fd594
+	base = 73f88ad
 	trimbase = 
 	parent = rpm/indigo/multi_interface_roam
-	previous = 
+	previous = a6fd594
