--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dec04f9
+	base = f74b138
 	trimbase = 
 	parent = rpm/indigo/network_control_tests
-	previous = 
+	previous = dec04f9
