--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8262d78
+	base = 30b3847
 	trimbase = 
 	parent = release/indigo/asmach
-	previous = 
+	previous = 8262d78
