--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 91bc0eb
+	base = 3724291
 	trimbase = 
 	parent = rpm/indigo/network_detector
-	previous = 
+	previous = 91bc0eb
