--- a/access_point_control/package.xml
+++ b/access_point_control/package.xml
@@ -1,12 +1,12 @@
 <package>
   <name>access_point_control</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>Defines an API for access point control based on 
     dynamic_reconfigure. Other packages must
     implement the API for various access-point models: 
     for example: hostapd_access_point for hostapd-based control or
     linksys_access_point for Linksys router web interface.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
