--- a/asmach/package.xml
+++ b/asmach/package.xml
@@ -1,13 +1,13 @@
 <package>
   <name>asmach</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>SMACH, which stands for 'state machine', is a task-level
     architecture for rapidly creating complex robot behavior. At its
     core, SMACH is a ROS-independent Python library to build
     hierarchical state machines.  SMACH is a new library that takes
     advantage of very old concepts in order to quickly create robust
     robot behavior with maintainable and modular code.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
