--- a/asmach_tutorials/package.xml
+++ b/asmach_tutorials/package.xml
@@ -1,8 +1,8 @@
 <package>
   <name>asmach_tutorials</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>This package containes numerous examples of how to use SMACH. See the examples directory.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
