--- a/ieee80211_channels/package.xml
+++ b/ieee80211_channels/package.xml
@@ -1,9 +1,9 @@
 <package>
   <name>ieee80211_channels</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>This package provides mapping from frequencies to
     IEEE802.11 channels and vice-versa.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
