--- a/network_control_tests/package.xml
+++ b/network_control_tests/package.xml
@@ -1,10 +1,10 @@
 <package>
   <name>network_control_tests</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>Test suite for the packages that are part of the "WiFi Test Setup" project:
     network_monitor_udp, network_traffic_control, hostapd_access_point, linksys_access_point,
     ddwrt_access_point.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
