--- a/network_detector/package.xml
+++ b/network_detector/package.xml
@@ -1,11 +1,11 @@
 <package>
   <name>network_detector</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>A ROS node that watches a given network interface and publishes
      whether it is both UP and RUNNING (indicating that a cable is
      plugged into it and communication is happening, for instance) or
      not.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
