--- a/network_monitor_udp/package.xml
+++ b/network_monitor_udp/package.xml
@@ -1,11 +1,11 @@
 <package>
   <name>network_monitor_udp</name>
-  <version>1.0.10</version>
+  <version>1.0.12</version>
   <description>Facilities to monitor a network connection by sending UDP packets from
     a client to a server, which bounces them back to the client. The client
     collects statistics on latency and loss. The server is a C standalone utility
     or a ROS node. The client can be a ROS node, a standalone utility or a python class.</description>
-  <maintainer email="dash@clearpathrobotics.com">Dash</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
