--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f5300a9
-	trimbase = 
+	trim = ieee80211_channels
+	base = 012a5c8
+	trimbase = f5300a9
 	parent = upstream
 	previous = 14de5d3
