--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1e78a7d
-	trimbase = 
+	trim = access_point_control
+	base = 0668d2c
+	trimbase = 1e78a7d
 	parent = upstream
 	previous = 14de5d3
