--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = db176fd
-	trimbase = 
+	trim = asmach
+	base = da5f06a
+	trimbase = db176fd
 	parent = upstream
 	previous = 14de5d3
