--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3144d8d
-	trimbase = 
+	trim = network_control_tests
+	base = 8b1c8f9
+	trimbase = 3144d8d
 	parent = upstream
 	previous = 14de5d3
