--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d177f32
-	trimbase = 
+	trim = ddwrt_access_point
+	base = 9685c2e
+	trimbase = d177f32
 	parent = upstream
 	previous = 14de5d3
