--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fbba384
-	trimbase = 
+	trim = linux_networking
+	base = 94190f7
+	trimbase = fbba384
 	parent = upstream
 	previous = 14de5d3
