--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e3ad5c1
-	trimbase = 
+	trim = network_detector
+	base = d889a33
+	trimbase = e3ad5c1
 	parent = upstream
 	previous = 14de5d3
