--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f9b26fe
-	trimbase = 
+	trim = network_monitor_udp
+	base = dde9403
+	trimbase = f9b26fe
 	parent = upstream
 	previous = 14de5d3
