--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 07a1b5b
-	trimbase = 
+	trim = asmach_tutorials
+	base = 5a9b29c
+	trimbase = 07a1b5b
 	parent = upstream
 	previous = 14de5d3
