--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d889a33
+	base = b4c8992
 	trimbase = 
 	parent = release/kinetic/network_detector
-	previous = 
+	previous = d889a33
