--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 533449c
+	base = 8c85d48
 	trimbase = 
 	parent = debian/kinetic/network_detector
-	previous = 
+	previous = 533449c
