--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a9b29c
+	base = c78ab75
 	trimbase = 
 	parent = release/kinetic/asmach_tutorials
-	previous = 
+	previous = 5a9b29c
