--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3a629e0
+	base = fc4b10e
 	trimbase = 
 	parent = debian/kinetic/asmach_tutorials
-	previous = 
+	previous = 3a629e0
