--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0668d2c
+	base = 3d6b87e
 	trimbase = 
 	parent = release/kinetic/access_point_control
-	previous = 
+	previous = 0668d2c
