--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 737c67a
+	base = 8b0eaf8
 	trimbase = 
 	parent = debian/kinetic/access_point_control
-	previous = 
+	previous = 737c67a
