--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da5f06a
+	base = 397cbf6
 	trimbase = 
 	parent = release/kinetic/asmach
-	previous = 
+	previous = da5f06a
