--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0be68e5
+	base = d6896cd
 	trimbase = 
 	parent = debian/kinetic/asmach
-	previous = 
+	previous = 0be68e5
