--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8b1c8f9
+	base = adf4198
 	trimbase = 
 	parent = release/kinetic/network_control_tests
-	previous = 
+	previous = 8b1c8f9
