--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7152236
+	base = fc6d750
 	trimbase = 
 	parent = debian/kinetic/network_control_tests
-	previous = 
+	previous = 7152236
