--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0d895cf
+	base = b37a3e0
 	trimbase = 
 	parent = release/kinetic/network_traffic_control
-	previous = 
+	previous = 0d895cf
