--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 41ffdb5
+	base = 1b91379
 	trimbase = 
 	parent = debian/kinetic/network_traffic_control
-	previous = 
+	previous = 41ffdb5
