--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9091da4
+	base = 37de273
 	trimbase = 
 	parent = release/kinetic/linksys_access_point
-	previous = 
+	previous = 9091da4
