--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31749c1
+	base = 895e0e5
 	trimbase = 
 	parent = debian/kinetic/linksys_access_point
-	previous = 
+	previous = 31749c1
