--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = abf95b1
+	base = f0eb2f8
 	trimbase = 
 	parent = release/kinetic/hostapd_access_point
-	previous = 
+	previous = abf95b1
