--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f18e065
+	base = 2d214df
 	trimbase = 
 	parent = debian/kinetic/hostapd_access_point
-	previous = 
+	previous = f18e065
