--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9685c2e
+	base = 9d0b4c4
 	trimbase = 
 	parent = release/kinetic/ddwrt_access_point
-	previous = 
+	previous = 9685c2e
