--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ec6ac14
+	base = f10e34d
 	trimbase = 
 	parent = debian/kinetic/ddwrt_access_point
-	previous = 
+	previous = ec6ac14
