--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ebc8f2c
+	base = db94c55
 	trimbase = 
 	parent = release/kinetic/multi_interface_roam
-	previous = 
+	previous = ebc8f2c
