--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 03379a6
+	base = 6340d40
 	trimbase = 
 	parent = debian/kinetic/multi_interface_roam
-	previous = 
+	previous = 03379a6
