--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dde9403
+	base = 84f5f48
 	trimbase = 
 	parent = release/kinetic/network_monitor_udp
-	previous = 
+	previous = dde9403
