--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 79fca97
+	base = 0152e2e
 	trimbase = 
 	parent = debian/kinetic/network_monitor_udp
-	previous = 
+	previous = 79fca97
