--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 94190f7
+	base = 62f5700
 	trimbase = 
 	parent = release/kinetic/linux_networking
-	previous = 
+	previous = 94190f7
