--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1940582
+	base = 0212bbd
 	trimbase = 
 	parent = debian/kinetic/linux_networking
-	previous = 
+	previous = 1940582
