--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 012a5c8
+	base = 5233170
 	trimbase = 
 	parent = release/kinetic/ieee80211_channels
-	previous = 
+	previous = 012a5c8
