--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 25fdc9f
+	base = c803dcf
 	trimbase = 
 	parent = debian/kinetic/ieee80211_channels
-	previous = 
+	previous = 25fdc9f
