--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f1c7edc
-	trimbase = 
+	trim = ieee80211_channels
+	base = 24c6b20
+	trimbase = f1c7edc
 	parent = upstream
 	previous = 14de5d3
