--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b2e8a22
-	trimbase = 
+	trim = access_point_control
+	base = 82f734e
+	trimbase = b2e8a22
 	parent = upstream
 	previous = 14de5d3
