--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8b9d10e
-	trimbase = 
+	trim = hostapd_access_point
+	base = 0e6d3fb
+	trimbase = 8b9d10e
 	parent = upstream
 	previous = 14de5d3
