--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cb7a88d
-	trimbase = 
+	trim = multi_interface_roam
+	base = a32a4a9
+	trimbase = cb7a88d
 	parent = upstream
 	previous = 14de5d3
