--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7626ad9
-	trimbase = 
+	trim = linux_networking
+	base = ffabf5f
+	trimbase = 7626ad9
 	parent = upstream
 	previous = 14de5d3
