--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 692749e
-	trimbase = 
+	trim = asmach
+	base = 2cea24a
+	trimbase = 692749e
 	parent = upstream
 	previous = 14de5d3
