--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ba2ea6a
-	trimbase = 
+	trim = ddwrt_access_point
+	base = 87c954c
+	trimbase = ba2ea6a
 	parent = upstream
 	previous = 14de5d3
