--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9451a50
-	trimbase = 
+	trim = linksys_access_point
+	base = 5e83d7e
+	trimbase = 9451a50
 	parent = upstream
 	previous = 14de5d3
