--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c0c35e5
-	trimbase = 
+	trim = network_control_tests
+	base = e3350d4
+	trimbase = c0c35e5
 	parent = upstream
 	previous = 14de5d3
