--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c350021
-	trimbase = 
+	trim = network_detector
+	base = 74bece6
+	trimbase = c350021
 	parent = upstream
 	previous = 14de5d3
