--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9a75d85
-	trimbase = 
+	trim = network_traffic_control
+	base = a7ada78
+	trimbase = 9a75d85
 	parent = upstream
 	previous = 14de5d3
