--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0dbfe07
-	trimbase = 
+	trim = network_monitor_udp
+	base = 55a15ae
+	trimbase = 0dbfe07
 	parent = upstream
 	previous = 14de5d3
