--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 28d38a1
-	trimbase = 
+	trim = asmach_tutorials
+	base = f68c7cc
+	trimbase = 28d38a1
 	parent = upstream
 	previous = 14de5d3
