--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 82f734e
+	base = c46a34a
 	trimbase = 
 	parent = release/lunar/access_point_control
-	previous = 
+	previous = 82f734e
