--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eaf206a
+	base = 3c3535a
 	trimbase = 
 	parent = debian/lunar/access_point_control
-	previous = 
+	previous = eaf206a
