--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a32a4a9
+	base = d400fe5
 	trimbase = 
 	parent = release/lunar/multi_interface_roam
-	previous = 
+	previous = a32a4a9
