--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fbce824
+	base = 4cc98de
 	trimbase = 
 	parent = debian/lunar/multi_interface_roam
-	previous = 
+	previous = fbce824
