--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87c954c
+	base = 7322bc2
 	trimbase = 
 	parent = release/lunar/ddwrt_access_point
-	previous = 
+	previous = 87c954c
