--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3c94737
+	base = 54a17a5
 	trimbase = 
 	parent = debian/lunar/ddwrt_access_point
-	previous = 
+	previous = 3c94737
