--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e3350d4
+	base = cd9d645
 	trimbase = 
 	parent = release/lunar/network_control_tests
-	previous = 
+	previous = e3350d4
