--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0a8af23
+	base = d137d1a
 	trimbase = 
 	parent = debian/lunar/network_control_tests
-	previous = 
+	previous = 0a8af23
