--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e6d3fb
+	base = e813cc0
 	trimbase = 
 	parent = release/lunar/hostapd_access_point
-	previous = 
+	previous = 0e6d3fb
