--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f40b5ec
+	base = fa49c0b
 	trimbase = 
 	parent = debian/lunar/hostapd_access_point
-	previous = 
+	previous = f40b5ec
