--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74bece6
+	base = e1bd51b
 	trimbase = 
 	parent = release/lunar/network_detector
-	previous = 
+	previous = 74bece6
