--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = faa4ce0
+	base = ca83dfe
 	trimbase = 
 	parent = debian/lunar/network_detector
-	previous = 
+	previous = faa4ce0
