--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2cea24a
+	base = 8ec19d8
 	trimbase = 
 	parent = release/lunar/asmach
-	previous = 
+	previous = 2cea24a
