--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d33b701
+	base = 94e9ee7
 	trimbase = 
 	parent = debian/lunar/asmach
-	previous = 
+	previous = d33b701
