--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55a15ae
+	base = 77949fa
 	trimbase = 
 	parent = release/lunar/network_monitor_udp
-	previous = 
+	previous = 55a15ae
