--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 618ce03
+	base = 7d2390c
 	trimbase = 
 	parent = debian/lunar/network_monitor_udp
-	previous = 
+	previous = 618ce03
