--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5e83d7e
+	base = 5e125b7
 	trimbase = 
 	parent = release/lunar/linksys_access_point
-	previous = 
+	previous = 5e83d7e
