--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0070bd4
+	base = 5b6aac1
 	trimbase = 
 	parent = debian/lunar/linksys_access_point
-	previous = 
+	previous = 0070bd4
