--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 24c6b20
+	base = de51fb8
 	trimbase = 
 	parent = release/lunar/ieee80211_channels
-	previous = 
+	previous = 24c6b20
