--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e7113f6
+	base = 002982c
 	trimbase = 
 	parent = debian/lunar/ieee80211_channels
-	previous = 
+	previous = e7113f6
