--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ffabf5f
+	base = e11ba01
 	trimbase = 
 	parent = release/lunar/linux_networking
-	previous = 
+	previous = ffabf5f
