--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1d870b7
+	base = d01ee4d
 	trimbase = 
 	parent = debian/lunar/linux_networking
-	previous = 
+	previous = 1d870b7
