--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f68c7cc
+	base = 35f1afd
 	trimbase = 
 	parent = release/lunar/asmach_tutorials
-	previous = 
+	previous = f68c7cc
