--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f184d1
+	base = fe0f774
 	trimbase = 
 	parent = debian/lunar/asmach_tutorials
-	previous = 
+	previous = 1f184d1
