--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a7ada78
+	base = e795672
 	trimbase = 
 	parent = release/lunar/network_traffic_control
-	previous = 
+	previous = a7ada78
