--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e372a3
+	base = b965c8f
 	trimbase = 
 	parent = debian/lunar/network_traffic_control
-	previous = 
+	previous = 7e372a3
