--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f06eb9e
+	base = c96f98a
 	trimbase = 
 	parent = debian/lunar/access_point_control
-	previous = 
+	previous = f06eb9e
