--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 927cdfb
+	base = 5f34c34
 	trimbase = 
 	parent = debian/lunar/multi_interface_roam
-	previous = 
+	previous = 927cdfb
