--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = db12c9e
+	base = 182b9f5
 	trimbase = 
 	parent = debian/lunar/ddwrt_access_point
-	previous = 
+	previous = db12c9e
