--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c643f73
+	base = 4a4f4b2
 	trimbase = 
 	parent = debian/lunar/network_control_tests
-	previous = 
+	previous = c643f73
