--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 20f8dc5
+	base = 3ee4559
 	trimbase = 
 	parent = debian/lunar/hostapd_access_point
-	previous = 
+	previous = 20f8dc5
