--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 86fab2b
+	base = d98c9c6
 	trimbase = 
 	parent = debian/lunar/network_detector
-	previous = 
+	previous = 86fab2b
