--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8b8f456
+	base = 359ae6b
 	trimbase = 
 	parent = debian/lunar/asmach
-	previous = 
+	previous = 8b8f456
