--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 38f95da
+	base = 4c90a09
 	trimbase = 
 	parent = debian/lunar/network_monitor_udp
-	previous = 
+	previous = 38f95da
