--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ddded6c
+	base = db40c2c
 	trimbase = 
 	parent = debian/lunar/linksys_access_point
-	previous = 
+	previous = ddded6c
