--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 17033c3
+	base = 79579e5
 	trimbase = 
 	parent = debian/lunar/ieee80211_channels
-	previous = 
+	previous = 17033c3
