--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7b7facf
+	base = c728b0b
 	trimbase = 
 	parent = debian/lunar/linux_networking
-	previous = 
+	previous = 7b7facf
