--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7d22eab
+	base = cf30d4f
 	trimbase = 
 	parent = debian/lunar/asmach_tutorials
-	previous = 
+	previous = 7d22eab
