--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5fd9e5a
+	base = 0ed4b55
 	trimbase = 
 	parent = debian/lunar/network_traffic_control
-	previous = 
+	previous = 5fd9e5a
