--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 160ced6
-	trimbase = 
+	trim = ieee80211_channels
+	base = 1701167
+	trimbase = 160ced6
 	parent = upstream
 	previous = 816c154
