--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7923446
-	trimbase = 
+	trim = access_point_control
+	base = 40c9157
+	trimbase = 7923446
 	parent = upstream
 	previous = 816c154
