--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8fd0841
-	trimbase = 
+	trim = multi_interface_roam
+	base = 2799fea
+	trimbase = 8fd0841
 	parent = upstream
 	previous = 816c154
