--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d9f73fb
-	trimbase = 
+	trim = linksys_access_point
+	base = 684c6f8
+	trimbase = d9f73fb
 	parent = upstream
 	previous = 816c154
