--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b98fdec
-	trimbase = 
+	trim = asmach
+	base = 2e3dbf8
+	trimbase = b98fdec
 	parent = upstream
 	previous = 816c154
