--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 50013a6
-	trimbase = 
+	trim = linux_networking
+	base = 14da245
+	trimbase = 50013a6
 	parent = upstream
 	previous = 816c154
