--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5820651
-	trimbase = 
+	trim = ddwrt_access_point
+	base = 738e3b5
+	trimbase = 5820651
 	parent = upstream
 	previous = 816c154
