--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 69b053c
-	trimbase = 
+	trim = hostapd_access_point
+	base = 885b6c6
+	trimbase = 69b053c
 	parent = upstream
 	previous = 816c154
