--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 69e830b
-	trimbase = 
+	trim = network_detector
+	base = 6bec733
+	trimbase = 69e830b
 	parent = upstream
 	previous = 816c154
