--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0596be0
-	trimbase = 
+	trim = network_traffic_control
+	base = d0f234d
+	trimbase = 0596be0
 	parent = upstream
 	previous = 816c154
