--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d55b99b
-	trimbase = 
+	trim = network_monitor_udp
+	base = 27a1ee2
+	trimbase = d55b99b
 	parent = upstream
 	previous = 816c154
