--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2f70411
-	trimbase = 
+	trim = asmach_tutorials
+	base = a861403
+	trimbase = 2f70411
 	parent = upstream
 	previous = 816c154
