--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7649988
+	base = f1920b1
 	trimbase = 
 	parent = release/melodic/network_control_tests
-	previous = 
+	previous = 7649988
