--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d545a0
+	base = 60ff5eb
 	trimbase = 
 	parent = debian/melodic/network_control_tests
-	previous = 
+	previous = 6d545a0
